# useful-examples

./: README.md
Basic-autotools/: Makefile
Basic-autotools-library/: Makefile
Basic-autotools-library-pc-file/: Makefile  series
Basic-autotools-library-pc-file/.svn/: entries
Basic-autotools-library-pc-file/.svn/text-base/: Config.svn-base
Basic-autotools-library-pc-file/patches/: series
Basic-autotools-library-pc-file/patches/.svn/: entries
Basic-autotools-library-pc-file/patches/.svn/text-base/: add-autotools.patch.svn-base
Basic-autotools-library-pc-file/src/: Makefile.am  configure.ac  libpugixml.pc.in
Basic-autotools-library-pc-file/src/src/: Makefile.am
Basic-autotools-library/src/: Makefile.am  configure.ac
Basic-autotools-library/src/src/: Makefile.am  rtsp-set-timeout.c
Basic-autotools/src/: configure.ac
Basic-autotools/src/src/: Makefile.am  rtsp-set-timeout.c
gst-1.0-examples/gst-1.0-basetransform-bayercrop/: configure.ac
gst-1.0-examples/gst-1.0-basetransform-bayercrop/src/: Makefile.am  gstbayercrop.c  gstbayercrop.h
gst-1.0-examples/gst-1.0-basetransform/src/: .gstmyelement.c.swp
gst-1.0-examples/gst-1.0-basic-app/: Config  Makefile
gst-1.0-examples/gst-1.0-basic-app/src/: Makefile.in  aclocal.m4  configure  configure.ac  libtool.orig
gst-1.0-examples/gst-1.0-basic-app/src/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
gst-1.0-examples/gst-1.0-basic-app/src/src/: Makefile.am  Makefile.in  gstreamer.c
gst-basic-app/: Config  Makefile
gst-basic-app/src/: autogen.sh
gst-basic-app/src/src/: gstreamer.c
gst-basic-filter/src/src/: Makefile.am  gstbufferpartitioner.c
gst-filter-transform-basic/: Config  Makefile
gst-filter-transform-basic/src/src/: gstbufferpartitioner.c  gstbufferpartitioner.h
